--- a/public/templates/navigation.html
+++ b/public/templates/navigation.html
@@ -16,7 +16,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li ng-class="(active === '/' ? 'active' : ' ')"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
-        <li ng-class="(active === '/about' ? 'active' : ' ')"><a href="#/about">About</a></li>        
+        <li ng-class="(active === '/about' ? 'active' : ' ')"><a href="#/about">About</a></li>    
+        <li><a href="#/timeline">Timeline</a></li>    
       </ul>
       <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -37,7 +38,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="">Separated link</a></li> -->
           </ul>
-        </li>
+        </li>       
       </ul>
     </div><!-- /.navbar-collapse -->
     <div class="navbar-brand loading">
