--- a/public/templates/navigation.html
+++ b/public/templates/navigation.html
@@ -8,16 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">Laravel and AngularJS</a>
+      <a class="navbar-brand" href="/">Laravel and AngularJS</a>
       
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li ng-class="(active === '/' ? 'active' : ' ')"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
-        <li ng-class="(active === '/about' ? 'active' : ' ')"><a href="#/about">About</a></li>    
-        <li><a href="#/timeline">Timeline</a></li>    
+        <li ng-class="(active === '/' ? 'active' : ' ')"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+        <li ng-class="(active === '/about' ? 'active' : ' ')"><a href="/about">About</a></li>    
+        <li><a href="/timeline">Timeline</a></li>    
       </ul>
       <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -27,12 +27,19 @@
       </form> -->
 
       <ul class="nav navbar-nav navbar-right">
-        <li ng-if="!isAuthenticated"><a href="#/login">Login</a></li>
-        <li ng-if="!isAuthenticated"><a href="#/register">Register</a></li>
+        <li ng-if="!isAuthenticated"><a href="/login">Login</a></li>
+        <li ng-if="!isAuthenticated"><a href="/register">Register</a></li>
         <li ng-if="isAuthenticated" class="dropdown">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user}} <span class="caret"></span></a>
+
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <img class="img-circle" width="50" ng-src="uploads/{{ user_img }}" alt=""> 
+            {{user}} 
+            <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu">
+            <li ng-if="isAuthenticated"><a href="/dashboard">Dashboard</a></li>
             <li ng-click="logout()"><a href="">Logout</a></li>
+
             <!-- <li><a href="">Another action</a></li>
             <li><a href="">Something else here</a></li>
             <li role="separator" class="divider"></li>
