--- a/public/templates/timeline.html
+++ b/public/templates/timeline.html
@@ -4,5 +4,6 @@
 <div class="msd-wheel: myFunction($event, $delta);" id="while"> <!--  -->
     <!-- <img width="200" src="img/pexels-photo.jpg" alt="forScroll"/> -->
     <!-- <p ng-if="mytime">{{ currentTime }} | {{ mytime }}</p> -->
-    <p ng-repeat="d in dateTime">{{ $index }} - {{ d }}</p> 
+    <p ng-repeat="d in dateTime">{{ $index }} - {{ (d + (60)) }}</p> 
+    <!-- <div>{{ dateTime }}</div> -->
 </div>
