--- a/public/templates/navigation.html
+++ b/public/templates/navigation.html
@@ -18,6 +18,7 @@
         <li ng-class="(active === '/' ? 'active' : ' ')"><a href="/">Home <span class="sr-only">(current)</span></a></li>
         <li ng-class="(active === '/about' ? 'active' : ' ')"><a href="/about">About</a></li>    
         <li><a href="/timeline">Timeline</a></li>    
+        <!-- comment -->
       </ul>
       <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
