--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -42,6 +42,9 @@
                         </div>
                     </div>
                 </form>
+                <label for="on-typing">
+                    <input id="on-typing" ng-model="textVal" ng-change="inputChanged()">
+                </label>                
             </div>
         </div>
     </div>
